--- a/app/templates/password-reset-success.html
+++ b/app/templates/password-reset-success.html
@@ -188,7 +188,7 @@
 
                                                             <p><b>Hey {{name}},</b><br>
                                                             <p></p>
-                                                            Your Verification was completed. Login and make your
+                                                            Your password was reset successfully. Login and make your
                                                             biddings.</p>
 
                                                         </div>
